[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameUI.gd" type="Script" id=1]
[ext_resource path="res://ViewportTexture.gd" type="Script" id=2]
[ext_resource path="res://SqlErrors.gd" type="Script" id=3]
[ext_resource path="res://ItemList.gd" type="Script" id=4]
[ext_resource path="res://TreeTest.gd" type="Script" id=5]

[sub_resource type="CylinderMesh" id=1]

top_radius = 1.0
bottom_radius = 1.0
height = 2.0
radial_segments = 64
rings = 4

[node name="UI" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Hint", "Rect", "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="VBoxMain" type="VBoxContainer" parent="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1004.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction" ]

[node name="HBoxTop" type="HBoxContainer" parent="MarginContainer/VBoxMain"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 996.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Size Flags" ]

[node name="MainSceneTexture" type="TextureRect" parent="MarginContainer/VBoxMain/HBoxTop"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 692.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
expand = true
stretch_mode = 7
script = ExtResource( 2 )
_sections_unfolded = [ "Size Flags" ]

[node name="DataColumn" type="VBoxContainer" parent="MarginContainer/VBoxMain/HBoxTop"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 696.0
margin_right = 996.0
margin_bottom = 476.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="ScrollInfo" type="ScrollContainer" parent="MarginContainer/VBoxMain/HBoxTop/DataColumn"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 220.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 3
scroll_horizontal = true
scroll_vertical = true
_sections_unfolded = [ "Size Flags" ]

[node name="InfoText" type="TextEdit" parent="MarginContainer/VBoxMain/HBoxTop/DataColumn/ScrollInfo"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 220.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
highlight_current_line = false
syntax_highlighting = true
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
smooth_scrolling = false
v_scroll_speed = 80.0
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
script = ExtResource( 3 )
_sections_unfolded = [ "Caret", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="ScrollTabular" type="ScrollContainer" parent="MarginContainer/VBoxMain/HBoxTop/DataColumn"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal = true
scroll_vertical = true
_sections_unfolded = [ "Size Flags" ]

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxMain/HBoxTop/DataColumn/ScrollTabular"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 5
items = [  ]
select_mode = 1
allow_rmb_select = true
max_text_lines = 4
auto_height = true
max_columns = 10
icon_mode = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Columns", "Grow Direction", "Margin", "Material", "Rect", "Size Flags", "Visibility", "custom_constants" ]

[node name="Tree" type="Tree" parent="MarginContainer/VBoxMain/HBoxTop/DataColumn"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 426.0
margin_right = 300.0
margin_bottom = 476.0
grow_vertical = 0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/scroll_border = 5
script = ExtResource( 5 )
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="HBoxBottom" type="HBoxContainer" parent="MarginContainer/VBoxMain"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 480.0
margin_right = 996.0
margin_bottom = 580.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="SQLEdit" type="TextEdit" parent="MarginContainer/VBoxMain/HBoxBottom"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 922.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
smooth_scrolling = false
v_scroll_speed = 80.0
caret_block_mode = false
caret_blink = true
caret_blink_speed = 0.65
_sections_unfolded = [ "Caret", "Focus", "Grow Direction", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Visibility", "custom_constants" ]

[node name="ExecuteButton" type="Button" parent="MarginContainer/VBoxMain/HBoxBottom"]

modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 926.0
margin_right = 996.0
margin_bottom = 100.0
rect_min_size = Vector2( 70, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Execute"
flat = false
_sections_unfolded = [ "Anchor", "Rect", "Theme", "Visibility" ]

[node name="SceneVp" type="Viewport" parent="."]

arvr = false
size = Vector2( 1024, 1024 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = false
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = true
render_target_clear_mode = 2
render_target_update_mode = 2
audio_listener_enable_2d = false
audio_listener_enable_3d = true
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "GUI", "Physics", "Render Target", "Shadow Atlas" ]

[node name="Spatial" type="Spatial" parent="SceneVp"]

[node name="MeshInstance" type="MeshInstance" parent="SceneVp/Spatial"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.153532, 0, 0.108162 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="SceneVp/Spatial"]

transform = Transform( 0.721549, 0, 0.692363, 0, 1, 0, -0.692363, 0, 0.721549, 7.51792, 2.04034, 5.2795 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_negative = false
light_specular = 0.5
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="Camera" type="Camera" parent="SceneVp/Spatial"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.71259 )
projection = 0
fov = 65.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler/tracking = 0

[connection signal="pressed" from="MarginContainer/VBoxMain/HBoxBottom/ExecuteButton" to="." method="_on_ExecuteButton_pressed"]


